<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M-Pasim Library</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_progress_signing_in">Masuk . . .</string>
    <string name="prompt_nim_nik">  Nomor Induk</string>
    <string name="prompt_password">  Password</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="action_sign_in_register"><b>Masuk</b></string>
    <string name="error_nim_nik_password_required">Tidak Boleh Kosong</string>
    <string name="error_invalid_nim_nik"></string>
    <string name="error_incorrect_password"></string>
    <string name="profil">Profil</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="status_peminjaman">Status Peminjaman</string>
    <string name="logout">logout</string>
    <string name="list_anggota">List Anggota</string>
    <string name="text_books">Buku</string>
    <string name="text_profile">Profil</string>
    <string name="text_borrowing">Peminjaman</string>
    <string name="text_booking">Pemesanan</string>
    <string name="text_location">Lokasi</string>
    <string name="detail_peminjaman">Detail Buku Yang Dipinjam</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konf_pass_baru">Konfirmasi Password Baru</string>
    <string name="spinner_title">Cari Berdasarkan</string>
    <string name="masukan_text">Masukan Text</string>
    <string name="cari">Cari Buku</string>
    <string name="pesan">Pesan Buku</string>
    <string name="carijudulbuku">Cari Judul Buku</string>
</resources>