<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="o" >

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg" >

        <!-- 229bc6 ee0000 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@layout/login_box"
                android:orientation="vertical" >

                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/spinnerField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@layout/login_textbox_username"
                    android:prompt="@string/spinner_title" />

                <EditText
                    android:id="@+id/textValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukan_text"
                    android:background="@layout/login_textbox_password" />

                <Button
                    android:id="@+id/btn_cari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@layout/login_button"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:text="@string/cari" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</merge>