<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="o" >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg" >

        <!-- 229bc6 ee0000 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@layout/login_box"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/passlama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@layout/login_textbox_username"
                    android:drawableLeft="@drawable/passlama"
                    android:hint="@string/password_lama"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/passbaru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@layout/login_textbox_passwordbaru"
                    android:drawableLeft="@drawable/passbaru"
                    android:hint="@string/password_baru"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/konfpassbaru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@layout/login_textbox_password"
                    android:drawableLeft="@drawable/passbarukonf"
                    android:hint="@string/konf_pass_baru"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/btn_ubah_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@layout/login_button"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:text="Ubah Password" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</merge>